[FAB-9244] Changes for issuance of idemix credential
WIP

Changes to support issuance of idemix credential.
