# api/net.go
@@ -18,6 +18,7 @@ package api
 
 import (
 	"github.com/cloudflare/cfssl/signer"
+	"github.com/hyperledger/fabric/idemix"
 )
 
 /*
@@ -41,6 +42,13 @@ type EnrollmentRequestNet struct {
 	signer.SignRequest
 	CAName   string
 	AttrReqs []*AttributeRequest `json:"attr_reqs,omitempty"`
+}
+
+// IdemixEnrollmentRequestNet is a request to enroll an identity and get idemix credential
+type IdemixEnrollmentRequestNet struct {
+	*idemix.CredRequest `json:"request"`
+	CAName              string `json:"caname"`
+	//AttrReqs            []*AttributeRequest `json:"attr_reqs,omitempty"`
 }
 
 // ReenrollmentRequestNet is a request to reenroll an identity.
